fix(genui-java-sdk): 完善校验/修复管线并贯通 externalRefs
跨 validation parser、semantic、stream、repair 与 generator 的一批改动，
含 reask 流式修复路径细化、externalRefs 在校验与修复中的贯通、repairConfig 解耦，
以及 parser/semantic 大范围重构与对应测试更新。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>