@@ -1,3 +1,7 @@
+/*
+ * Copyright (c) Huawei Technologies Co., Ltd. 2026. All rights reserved.
+ */
+
 package com.huawei.cloudsop.genui.core.validation;
 
 import java.util.Collections;
@@ -5,22 +9,26 @@ import java.util.LinkedHashMap;
 import java.util.Map;
 
 /**
- * Lightweight telemetry/generation metadata attached to a {@link ValidationResult}.
- * Keep minimal — advanced fields belong in Section 7+ types.
+ * 附加在 {@link ValidationResult} 上的轻量遥测/生成元数据。保持精简 —— 高级字段属于后续章节的类型。
+ *
+ * @param statementCount
+ *            语句数量
+ * @param rootName
+ *            DSL 中发现的根组件名，或 {@code null}
+ * @param mode
+ *            本次结果所用的校验模式
+ * @param extra
+ *            任意扩展数据；不会为 {@code null}，且不可变
+ *
+ * @since 2026
  */
-public record ValidationMetadata(
-    int statementCount,
-    /** Root component name found in the DSL, or {@code null}. */
-    String rootName,
-    /** Validation mode used for this result. */
-    ValidationMode mode,
-    /** Arbitrary extension data; never {@code null}, never mutable. */
-    Map<String, String> extra) {
+public record ValidationMetadata(int statementCount, String rootName, ValidationMode mode,
+        Map<String, String> extra) {
 
-  public ValidationMetadata {
-    extra =
-        extra == null
-            ? Map.of()
-            : Collections.unmodifiableMap(new LinkedHashMap<>(extra));
-  }
+    /**
+     * 紧凑构造方法，将 {@code extra} 归一化为不可变映射。
+     */
+    public ValidationMetadata {
+        extra = extra == null ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(extra));
+    }
 }
